@@ -1,5 +1,8 @@
 2021-02-08  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/server/Channel.java:
+	Report InvocationTargetException.getCause().
+
 	* pom.xml: Added spring-boot-starter-web.
 
 2021-02-05  Allen D. Ball  <ball@hcf.dev>
